# dotmaster

./: .gitignore  README.md  prompt.md  pyproject.toml  tree.yml
.github/workflows/: ci.yml  release.yml
dotmaster/: __init__.py  _version.py  backup.py  cli.py  config.py  merger.py  renderer.py  runner.py  wizard.py
dotmaster/plugins/: __init__.py  base.py
dotmaster/plugins/builtin/: __init__.py  alembic.py  database.py  docker.py  dotenv.py  editorconfig.py  eslint.py  github_actions.py  gitignore.py  gitlab_ci.py  prettier.py  prisma.py  pyproject.py  ruff.py
dotmaster/profiles/: __init__.py  backend_api.py  library.py  monorepo.py  web_app.py
dotmaster/templates/: alembic_env.j2  alembic_ini.j2  alembic_mako.j2  docker_compose.j2  dockerfile.j2  dockerignore.j2  editorconfig.j2  env_example.j2  eslintignore.j2  eslintrc.j2  github_ci.j2  gitignore.j2  gitlab_ci.j2  prettierignore.j2  prettierrc.j2  prisma_schema.j2  pyproject_toml.j2  ruff_toml.j2
tests/: test_config.py  test_merger.py  test_plugins.py  test_renderer.py
